--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
 			<li><a href="#">产品</a></li>
 			<li><a href="#" >关于</a></li>
 		</ul>
-		<a href="http://www.bee-framework.com/" class="logo" retina="true">A powerful rapid MVC framework for iOS</a>
+		<a href="http://www.bee-framework.com/" class="logo" retina="true" style="width:100px"></a>
+		<span style="float: left; margin-left: 0px; height: 80px; margin-top: 25px;"><span style="font-size:48;">Bee Framework</span><br/> A powerful rapid MVC framework for iOS.</span>
 	</div>
 	<!-- header end -->
 <!--main start-->
